--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
   "repository": "https://git.magicbean.us/andrew/es6-models",
   "author": "Andrew Kemp",
   "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "reflect-metadata": "^0.1.13",
+    "tslib": "^1.11.1",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "jest": "^25.1.0"
+    "@types/jest": "^25.1.3",
+    "jest": "^25.1.0",
+    "ts-jest": "^25.2.1"
   }
 }
