--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
   "author": "Andrew Kemp",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:debug": "jest test --runInBand --verbose=false"
   },
+  "engines" : {
+    "node" : "> 12.16.0",
+    "yarn": "> 1.22.0"
+  }, 
   "dependencies": {
     "reflect-metadata": "^0.1.13",
     "tslib": "^1.11.1",
